Prevent Express Checkout block from being cut off (https://github.com/woocommerce/woocommerce-blocks/pull/7152)
* Prevent Express Checkout block from being cut off

* Prevent step numbers from being cut off in editor

--- a/plugins/woocommerce-blocks/assets/js/blocks/checkout/styles/editor.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/checkout/styles/editor.scss
@@ -6,6 +6,7 @@
 		display: flex;
 		flex-flow: row wrap;
 		align-items: flex-start;
+		padding-left: 5px;
 
 		.wc-block-checkout__additional_fields {
 			padding: 0;
